apps/argocd/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-httproute
  namespace: infrastructure
spec:
  parentRefs:
    - name: private-gateway
      namespace: infrastructure
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - argocd.internal.manickamx2.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
          kind: Service
          group: ''
          weight: 1
